Fix extra title bot margin not appearing on mobile

--- a/src/pages/projects/projects.module.css
+++ b/src/pages/projects/projects.module.css
@@ -1,4 +1,5 @@
 @value marioWhite, marioOrange from '../../ui/colors/colors.module.css';
+@value breakpointSmall from '../../ui/metrics/breakpoints.module.css';
 @value baseCloudHeight: calc(100vh / 10);
 @value brickHeight: max(5%, 40px);
 
@@ -77,7 +78,7 @@
 
 @media(max-width: breakpointSmall) {
 
-  .projectsPage.eightBit .pageTitle {
+  .projectsPage.eightBit .pageTitleContainer {
     margin-bottom: 25px;
   }
 
